--- a/StreetLightControl/Objects/Project.build_log.htm
+++ b/StreetLightControl/Objects/Project.build_log.htm
@@ -22,22 +22,30 @@ Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 F:\WirelessNetwork-basedStreetLightMonitoringSystem\WirelessNetwork-basedStreetLightMonitoringSystem\StreetLightControl\Project.uvprojx
-Project File Date:  11/01/2025
+Project File Date:  11/09/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\qianrushi\MDK\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling PWM.c...
+compiling LightSensor.c...
+Hardware\LightSensor.h(6): warning:  #1-D: last line of file ends without a newline
+  #endif
+Hardware\LightSensor.c(18): warning:  #1-D: last line of file ends without a newline
+  }
+Hardware\LightSensor.c: 2 warnings, 0 errors
 compiling esp8266-01s.c...
+compiling main.c...
 linking...
-Program Size: Code=10572 RO-data=820 RW-data=36 ZI-data=4684  
-".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=11040 RO-data=824 RW-data=36 ZI-data=4684  
+".\Objects\Project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Target_1
   D:\qianrushi\MDK\ARM\PACK\Keil\STM32F1xx_DFP\2.4.1\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
