--- a/StreetLightControl/Objects/Project.build_log.htm
+++ b/StreetLightControl/Objects/Project.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 F:\WirelessNetwork-basedStreetLightMonitoringSystem\WirelessNetwork-basedStreetLightMonitoringSystem\StreetLightControl\Project.uvprojx
-Project File Date:  11/09/2025
+Project File Date:  11/20/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\qianrushi\MDK\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
+compiling esp8266-01s.c...
 linking...
-Program Size: Code=11204 RO-data=824 RW-data=36 ZI-data=5732  
+Program Size: Code=22398 RO-data=962 RW-data=60 ZI-data=7908  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
